# Statistical-Yearbook-DataFiller

./: .gitignore  LICENSE  README.md  README_EN.md  data.csv  main.py  pyproject.toml
statistical_yearbook_datafiller/: __init__.py  cli.py  config.py  constants.py  ds_parser.py  evidence.py  llm.py  pipeline.py  scraping.py
